src/objects/API_Credential__c.object
<CustomObject>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Type__c</fullName>
        <label>Grant Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>API Credential</label>
    <nameField>
        <label>API Credential Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>API Credentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>